--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
           >
           <ul class="header-list list">
             <li class="header-link">
-              <a href="./index.html" class="header-link-item link">Studio</a>
+              <a href="./index.html" class="header-link-item link current"
+                >Studio</a
+              >
             </li>
             <li class="header-link">
               <a href="./portfolio.html" class="header-link-item link"
@@ -62,7 +64,7 @@
       <section class="main-cap">
         <div class="container main-container">
           <h1 class="main-text">Effective Solutions for Your Business</h1>
-          <button type="button" class="main-btn main-btn-text">
+          <button type="button" class="main-btn main-btn-text" data-modal-open>
             Order Service
           </button>
         </div>
@@ -72,6 +74,11 @@
           <h2 class="feature-headline visually-hidden">Our advantages</h2>
           <ul class="feature-list list">
             <li class="feature-list-items">
+              <div class="feature-content-icons">
+                <svg width="64" height="64" class="feature-icons">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">Strategy</h3>
               <p class="feature-title-text">
                 Our goal is to identify the business problem to walk away with
@@ -79,6 +86,11 @@
               </p>
             </li>
             <li class="feature-list-items">
+              <div class="feature-content-icons">
+                <svg width="64" height="64" class="feature-icons">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">Punctuality</h3>
               <p class="feature-title-text">
                 Bring the key message to the brand's audience for the best price
@@ -86,6 +98,11 @@
               </p>
             </li>
             <li class="feature-list-items">
+              <div class="feature-content-icons">
+                <svg width="64" height="64" class="feature-icons">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">Diligence</h3>
               <p class="feature-title-text">
                 Research and confirm brands that present the strongest digital
@@ -93,6 +110,11 @@
               </p>
             </li>
             <li class="feature-list-items">
+              <div class="feature-content-icons">
+                <svg width="64" height="64" class="feature-icons">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="feature-title">Technologies</h3>
               <p class="feature-title-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -147,6 +169,36 @@
               <div class="content">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="team-work">Product Designer</p>
+                <ul class="team-soc-list list">
+                  <li class="team-soc-items">
+                    <a href="#" class="team-soc-link link">
+                      <svg width="16" height="16" class="team-soc-icons">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-items">
+                    <a href="#" class="team-soc-link link">
+                      <svg width="16" height="16" class="team-soc-icons">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-items">
+                    <a href="#" class="team-soc-link link">
+                      <svg width="16" height="16" class="team-soc-icons">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-items">
+                    <a href="#" class="team-soc-link link">
+                      <svg width="16" height="16" class="team-soc-icons">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-img">
@@ -159,6 +211,36 @@
               <div class="content">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="team-work">Frontend Developer</p>
+                <ul class="team-soc-list list">
+                  <li class="team-soc-items">
+                    <a href="#" class="team-soc-link link">
+                      <svg width="16" height="16" class="team-soc-icons">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-items">
+                    <a href="#" class="team-soc-link link">
+                      <svg width="16" height="16" class="team-soc-icons">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-items">
+                    <a href="#" class="team-soc-link link">
+                      <svg width="16" height="16" class="team-soc-icons">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-items">
+                    <a href="#" class="team-soc-link link">
+                      <svg width="16" height="16" class="team-soc-icons">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-img">
@@ -171,6 +253,36 @@
               <div class="content">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="team-work">Marketing</p>
+                <ul class="team-soc-list list">
+                  <li class="team-soc-items">
+                    <a href="#" class="team-soc-link link">
+                      <svg width="16" height="16" class="team-soc-icons">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-items">
+                    <a href="#" class="team-soc-link link">
+                      <svg width="16" height="16" class="team-soc-icons">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-items">
+                    <a href="#" class="team-soc-link link">
+                      <svg width="16" height="16" class="team-soc-icons">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-items">
+                    <a href="#" class="team-soc-link link">
+                      <svg width="16" height="16" class="team-soc-icons">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-img">
@@ -183,22 +295,140 @@
               <div class="content">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="team-work">UI Designer</p>
+                <ul class="team-soc-list list">
+                  <li class="team-soc-items">
+                    <a href="#" class="team-soc-link link">
+                      <svg width="16" height="16" class="team-soc-icons">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-items">
+                    <a href="#" class="team-soc-link link">
+                      <svg width="16" height="16" class="team-soc-icons">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-items">
+                    <a href="#" class="team-soc-link link">
+                      <svg width="16" height="16" class="team-soc-icons">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-soc-items">
+                    <a href="#" class="team-soc-link link">
+                      <svg width="16" height="16" class="team-soc-icons">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="customers">
+        <div class="container">
+          <h2 class="client-title">Customers</h2>
+          <ul class="client-list list">
+            <li class="client-items link">
+              <a href="#" class="client-link link"
+                ><svg width="104" height="56" class="client-icons">
+                  <use href="./images/icons.svg#icon-Logo"></use></svg
+              ></a>
+            </li>
+            <li class="client-items link">
+              <a href="#" class="client-link link"
+                ><svg width="104" height="56" class="client-icons">
+                  <use href="./images/icons.svg#icon-Logo2"></use></svg
+              ></a>
+            </li>
+            <li class="client-items link">
+              <a href="#" class="client-link link"
+                ><svg width="104" height="56" class="client-icons">
+                  <use href="./images/icons.svg#icon-Logo3"></use></svg
+              ></a>
+            </li>
+            <li class="client-items link">
+              <a href="#" class="client-link link"
+                ><svg width="104" height="56" class="client-icons">
+                  <use href="./images/icons.svg#icon-Logo4"></use></svg
+              ></a>
+            </li>
+            <li class="client-items link">
+              <a href="#" class="client-link link"
+                ><svg width="104" height="56" class="client-icons">
+                  <use href="./images/icons.svg#icon-Logo5"></use></svg
+              ></a>
+            </li>
+            <li class="client-items link">
+              <a href="#" class="client-link link"
+                ><svg width="104" height="56" class="client-icons">
+                  <use href="./images/icons.svg#icon-Logo6"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="footer-logo link"
-          >Web<span class="footer-accent">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-soc-box">
+        <div class="footer-box">
+          <a href="./index.html" class="footer-logo link"
+            >Web<span class="footer-accent">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-soc">
+          <p class="footer-title">Social media</p>
+          <ul class="footer-soc-list list">
+            <li class="footer-soc-items">
+              <a href="#" class="footer-soc-link link">
+                <svg width="16" height="16" class="footer-soc-icons">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-items">
+              <a href="#" class="footer-soc-link link">
+                <svg width="16" height="16" class="footer-soc-icons">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-items">
+              <a href="#" class="footer-soc-link link">
+                <svg width="16" height="16" class="footer-soc-icons">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-items">
+              <a href="#" class="footer-soc-link link">
+                <svg width="16" height="16" class="footer-soc-icons">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close" data-modal-close>
+          <svg width="18" height="18">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
