--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
               <a href="./index.html" class="header-link-item link">Studio</a>
             </li>
             <li class="header-link">
-              <a href="./portfolio.html" class="header-link-item link"
+              <a href="./portfolio.html" class="header-link-item link current"
                 >Portfolio</a
               >
             </li>
@@ -222,15 +222,51 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="footer-logo link"
-          >Web<span class="footer-accent">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-soc-box">
+        <div class="footer-box">
+          <a href="./index.html" class="footer-logo link"
+            >Web<span class="footer-accent">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-soc">
+          <p class="footer-title">Social media</p>
+          <ul class="footer-soc-list list">
+            <li class="footer-soc-items">
+              <a href="#" class="footer-soc-link link">
+                <svg width="16" height="16" class="footer-soc-icons">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-items">
+              <a href="#" class="footer-soc-link link">
+                <svg width="16" height="16" class="footer-soc-icons">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-items">
+              <a href="#" class="footer-soc-link link">
+                <svg width="16" height="16" class="footer-soc-icons">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-items">
+              <a href="#" class="footer-soc-link link">
+                <svg width="16" height="16" class="footer-soc-icons">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
+    </body>
   </body>
 </html>
