--- a/portfolio.html
+++ b/portfolio.html
@@ -92,6 +92,7 @@
           </ul>
           <ul class="portfolio-project-list list">
             <li class="portfolio-project-item">
+              <div class="portfolio-thumb">
               <a href="" class="portfolio-project-link link">
                 <img
                   src="./images/banking_img1.jpg"
@@ -99,6 +100,8 @@
                   width="360"
                   class="portfolio-project-img"
                 />
+                <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+              </div>
                 <div class="portfolio-content">
                   <h2 class="portfolio-title">Banking App Interface Concept</h2>
                   <p class="portfolio-pre-title">App</p>
@@ -106,13 +109,13 @@
               </a>
             </li>
             <li class="portfolio-project-item">
-              <a href="" class="portfolio-project-link link"
+              <div class="portfolio-thumb"><a href="" class="portfolio-project-link link"
                 ><img
                   src="./images/cashless_img1.jpg"
                   alt="Cashless Payment"
                   width="360"
                   class="portfolio-project-img"
-                />
+                /> <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
                 <div class="portfolio-content">
                   <h2 class="portfolio-title">Cashless Payment</h2>
                   <p class="portfolio-pre-title">Marketing</p>
@@ -120,13 +123,13 @@
               >
             </li>
             <li class="portfolio-project-item">
-              <a href="" class="portfolio-project-link link">
+              <div class="portfolio-thumb"><a href="" class="portfolio-project-link link">
                 <img
                   src="./images/meditation_img1.jpg"
                   alt="Meditation App"
                   width="360"
                   class="portfolio-project-img"
-                />
+                /> <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
                 <div class="portfolio-content">
                   <h2 class="portfolio-title">Meditation App</h2>
                   <p class="portfolio-pre-title">App</p>
@@ -134,13 +137,13 @@
               >
             </li>
             <li class="portfolio-project-item">
-              <a href="" class="portfolio-project-link link"
+              <div class="portfolio-thumb"><a href="" class="portfolio-project-link link"
                 ><img
                   src="./images/taxi_img1.jpg"
                   alt="Taxi Service"
                   width="360"
                   class="portfolio-project-img"
-                />
+                /><p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
                 <div class="portfolio-content">
                   <h2 class="portfolio-title">Taxi Service</h2>
                   <p class="portfolio-pre-title">Marketing</p>
@@ -148,13 +151,14 @@
               >
             </li>
             <li class="portfolio-project-item">
-              <a href="" class="portfolio-project-link link"
+              <div class="portfolio-thumb"><a href="" class="portfolio-project-link link"
                 ><img
                   src="./images/screen_img1.jpg"
                   alt="Screen Illustrations"
                   width="360"
                   class="portfolio-project-img"
                 />
+                <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
                 <div class="portfolio-content">
                   <h2 class="portfolio-title">Screen Illustrations</h2>
                   <p class="portfolio-pre-title">Design</p>
@@ -162,13 +166,13 @@
               >
             </li>
             <li class="portfolio-project-item">
-              <a href="" class="portfolio-project-link link"
+              <div class="portfolio-thumb"><a href="" class="portfolio-project-link link"
                 ><img
                   src="./images/online_img1.jpg"
                   alt="Online Courses"
                   width="360"
                   class="portfolio-project-img"
-                />
+                /> <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
                 <div class="portfolio-content">
                   <h2 class="portfolio-title">Online Courses</h2>
                   <p class="portfolio-pre-title">Marketing</p>
@@ -176,13 +180,13 @@
               >
             </li>
             <li class="portfolio-project-item">
-              <a href="" class="portfolio-project-link link"
+              <div class="portfolio-thumb"><a href="" class="portfolio-project-link link"
                 ><img
                   src="./images/instagram_img1.jpg"
                   alt="Instagram Stories Concept"
                   width="360"
                   class="portfolio-project-img"
-                />
+                /><p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
                 <div class="portfolio-content">
                   <h2 class="portfolio-title">Instagram Stories Concept</h2>
                   <p class="portfolio-pre-title">Design</p>
@@ -190,13 +194,14 @@
               >
             </li>
             <li class="portfolio-project-item">
-              <a href="" class="portfolio-project-link link"
+              <div class="portfolio-thumb"><a href="" class="portfolio-project-link link"
                 ><img
                   src="./images/organic_img1.jpg"
                   alt="Organic Food"
                   width="360"
                   class="portfolio-project-img"
                 />
+                <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
                 <div class="portfolio-content">
                   <h2 class="portfolio-title">Organic Food</h2>
                   <p class="portfolio-pre-title">Web Site</p>
@@ -204,13 +209,13 @@
               >
             </li>
             <li class="portfolio-project-item">
-              <a href="" class="portfolio-project-link link"
-                ><img
-                  src="./images/fresh_img1.jpg"
-                  alt="Fresh Coffee"
-                  width="360"
-                  class="portfolio-project-img"
-                />
+             <div class="portfolio-thumb"> <a href="" class="portfolio-project-link link"
+              ><img
+                src="./images/fresh_img1.jpg"
+                alt="Fresh Coffee"
+                width="360"
+                class="portfolio-project-img"
+              /> <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
                 <div class="portfolio-content">
                   <h2 class="portfolio-title">Fresh Coffee</h2>
                   <p class="portfolio-pre-title">Web Site</p>
