--- a/portfolio.html
+++ b/portfolio.html
@@ -92,20 +92,17 @@
           </ul>
           <ul class="portfolio-project-list list">
             <li class="portfolio-project-item">
-              <div class="portfolio-thumb">
-              <a href="" class="portfolio-project-link link">
+              <div class="portfolio-thumb"><a href="" class="portfolio-project-link link">
                 <img
-                  src="./images/banking_img1.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                  class="portfolio-project-img"
-                />
-                <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-              </div>
-                <div class="portfolio-content">
-                  <h2 class="portfolio-title">Banking App Interface Concept</h2>
-                  <p class="portfolio-pre-title">App</p>
-                </div>
+                src="./images/banking_img1.jpg"
+                alt="Banking App Interface Concept"
+                width="360"
+                class="portfolio-project-img"
+              />
+              <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+              
+               <div class="portfolio-content"> <h2 class="portfolio-title">Banking App Interface Concept</h2>
+                <p class="portfolio-pre-title">App</p></div>
               </a>
             </li>
             <li class="portfolio-project-item">
