--- a/portfolio.html
+++ b/portfolio.html
@@ -206,18 +206,18 @@
               >
             </li>
             <li class="portfolio-project-item">
-             <div class="portfolio-thumb"> <a href="" class="portfolio-project-link link"
-              ><img
+             <div class="portfolio-thumb"><a href="" class="portfolio-project-link link">
+              <img
                 src="./images/fresh_img1.jpg"
                 alt="Fresh Coffee"
                 width="360"
-                class="portfolio-project-img"
-              /> <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+                class="portfolio-project-img"/>
+                <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
                 <div class="portfolio-content">
                   <h2 class="portfolio-title">Fresh Coffee</h2>
                   <p class="portfolio-pre-title">Web Site</p>
-                </div></a
-              >
+                </div>
+                </a>
             </li>
           </ul>
         </div>
