--- a/portfolio.html
+++ b/portfolio.html
@@ -92,27 +92,42 @@
           </ul>
           <ul class="portfolio-project-list list">
             <li class="portfolio-project-item">
-              <div class="portfolio-thumb"><a href="" class="portfolio-project-link link">
-                <img
-                src="./images/banking_img1.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-                class="portfolio-project-img"
-              />
-              <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
-              
-               <div class="portfolio-content"> <h2 class="portfolio-title">Banking App Interface Concept</h2>
-                <p class="portfolio-pre-title">App</p></div>
+              <a href="" class="portfolio-project-link link">
+                <div class="portfolio-thumb">
+                  <img
+                    src="./images/banking_img1.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                    class="portfolio-project-img"
+                  />
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
+                <div class="portfolio-content">
+                  <h2 class="portfolio-title">Banking App Interface Concept</h2>
+                  <p class="portfolio-pre-title">App</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-project-item">
-              <div class="portfolio-thumb"><a href="" class="portfolio-project-link link"
-                ><img
-                  src="./images/cashless_img1.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  class="portfolio-project-img"
-                /> <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+              <a href="" class="portfolio-project-link link"
+                ><div class="portfolio-thumb">
+                  <img
+                    src="./images/cashless_img1.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    class="portfolio-project-img"
+                  />
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-content">
                   <h2 class="portfolio-title">Cashless Payment</h2>
                   <p class="portfolio-pre-title">Marketing</p>
@@ -120,13 +135,20 @@
               >
             </li>
             <li class="portfolio-project-item">
-              <div class="portfolio-thumb"><a href="" class="portfolio-project-link link">
-                <img
-                  src="./images/meditation_img1.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  class="portfolio-project-img"
-                /> <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+              <a href="" class="portfolio-project-link link"
+                ><div class="portfolio-thumb">
+                  <img
+                    src="./images/meditation_img1.jpg"
+                    alt="Meditation App"
+                    width="360"
+                    class="portfolio-project-img"
+                  />
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-content">
                   <h2 class="portfolio-title">Meditation App</h2>
                   <p class="portfolio-pre-title">App</p>
@@ -134,13 +156,20 @@
               >
             </li>
             <li class="portfolio-project-item">
-              <div class="portfolio-thumb"><a href="" class="portfolio-project-link link"
-                ><img
-                  src="./images/taxi_img1.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  class="portfolio-project-img"
-                /><p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+              <a href="" class="portfolio-project-link link"
+                ><div class="portfolio-thumb">
+                  <img
+                    src="./images/taxi_img1.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    class="portfolio-project-img"
+                  />
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-content">
                   <h2 class="portfolio-title">Taxi Service</h2>
                   <p class="portfolio-pre-title">Marketing</p>
@@ -148,14 +177,20 @@
               >
             </li>
             <li class="portfolio-project-item">
-              <div class="portfolio-thumb"><a href="" class="portfolio-project-link link"
-                ><img
-                  src="./images/screen_img1.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  class="portfolio-project-img"
-                />
-                <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+              <a href="" class="portfolio-project-link link"
+                ><div class="portfolio-thumb">
+                  <img
+                    src="./images/screen_img1.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    class="portfolio-project-img"
+                  />
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-content">
                   <h2 class="portfolio-title">Screen Illustrations</h2>
                   <p class="portfolio-pre-title">Design</p>
@@ -163,13 +198,20 @@
               >
             </li>
             <li class="portfolio-project-item">
-              <div class="portfolio-thumb"><a href="" class="portfolio-project-link link"
-                ><img
-                  src="./images/online_img1.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  class="portfolio-project-img"
-                /> <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+              <a href="" class="portfolio-project-link link"
+                ><div class="portfolio-thumb">
+                  <img
+                    src="./images/online_img1.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    class="portfolio-project-img"
+                  />
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-content">
                   <h2 class="portfolio-title">Online Courses</h2>
                   <p class="portfolio-pre-title">Marketing</p>
@@ -177,13 +219,20 @@
               >
             </li>
             <li class="portfolio-project-item">
-              <div class="portfolio-thumb"><a href="" class="portfolio-project-link link"
-                ><img
-                  src="./images/instagram_img1.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                  class="portfolio-project-img"
-                /><p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+              <a href="" class="portfolio-project-link link"
+                ><div class="portfolio-thumb">
+                  <img
+                    src="./images/instagram_img1.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                    class="portfolio-project-img"
+                  />
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-content">
                   <h2 class="portfolio-title">Instagram Stories Concept</h2>
                   <p class="portfolio-pre-title">Design</p>
@@ -191,14 +240,20 @@
               >
             </li>
             <li class="portfolio-project-item">
-              <div class="portfolio-thumb"><a href="" class="portfolio-project-link link"
-                ><img
-                  src="./images/organic_img1.jpg"
-                  alt="Organic Food"
-                  width="360"
-                  class="portfolio-project-img"
-                />
-                <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+              <a href="" class="portfolio-project-link link"
+                ><div class="portfolio-thumb">
+                  <img
+                    src="./images/organic_img1.jpg"
+                    alt="Organic Food"
+                    width="360"
+                    class="portfolio-project-img"
+                  />
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-content">
                   <h2 class="portfolio-title">Organic Food</h2>
                   <p class="portfolio-pre-title">Web Site</p>
@@ -206,18 +261,25 @@
               >
             </li>
             <li class="portfolio-project-item">
-             <div class="portfolio-thumb"><a href="" class="portfolio-project-link link">
-              <img
-                src="./images/fresh_img1.jpg"
-                alt="Fresh Coffee"
-                width="360"
-                class="portfolio-project-img"/>
-                <p class="portfolio-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p></div>
+              <a href="" class="portfolio-project-link link"
+                ><div class="portfolio-thumb">
+                  <img
+                    src="./images/fresh_img1.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                    class="portfolio-project-img"
+                  />
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-content">
                   <h2 class="portfolio-title">Fresh Coffee</h2>
                   <p class="portfolio-pre-title">Web Site</p>
                 </div>
-                </a>
+              </a>
             </li>
           </ul>
         </div>
@@ -269,6 +331,5 @@
         </div>
       </div>
     </footer>
-    </body>
   </body>
 </html>
